I finished with adding an 800px media query that is responsive

--- a/about.html
+++ b/about.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1> ABOUT </h1>
+    <h2>About </h2>
+    <p>My name is Lawrence Salinas and I am an aspiring web developer, I am convinced that Lambda will give me
+        the best chance in a career in technology.
+        I am a very driven and motivated person. I strongly believe that I will be able to take on the intense
+        nature of the program. I am looking forward to starting a full-time job with the help of the Lambda
+        program. In addition, it would be most beneficial and effective for me to work with mentors who are
+        professionals in this field as well as working with fellow peers seeking the same goal. I hope to gain
+        experience in web development and software engineering.</p>
 </body>
 </html>
